# Otus_python_basic

./: README.md  requirements.txt
homework_01/: main.py
homework_02/: base.py  car.py  exceptions.py  plane.py
homework_03/: Dockerfile  main.py  pyproject.toml
homework_04/: config.py  jsonplaceholder_requests.py  main.py  models.py  pyproject.toml  requirements.tx  requirements.txt
homework_04/alembic/: env.py
homework_05/: app.py  pyproject.toml
homework_05/templates/: about.html  base.html  index.html
homework_06/: alembic.ini  pyproject.toml
homework_06/alembic/: env.py
homework_06/src/: config.py  main.py
homework_06/src/models/: __init__.py  base.py  post.py  user.py
