[tool.poetry]
name = "homework-03"
version = "0.1.0"
description = ""
authors = ["PristenCityMan <timonovsv1@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.114.1"
uvicorn = "^0.30.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
