[tool.poetry]
name = "homework-04"
version = "0.1.0"
description = ""
authors = ["PristenCityMan <timonovsv1@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
aiohttp = "^3.11.7"
sqlalchemy = "^2.0.36"


[tool.poetry.group.dev.dependencies]
black = "^24.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
